--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>y</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport"
+        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+  <title>网易严选</title>
+  <link rel="stylesheet" href="/static/css/reset.css">
+  <!--阿里图标库-->
+  <link rel="stylesheet" href="https://at.alicdn.com/t/font_973108_mpbgvmxiszi.css">
+  <!--解决点击响应延时0.3s问题-->
+  <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
+  <script type="text/javascript">
+    // 解决点击响应延时0.3s问题
+    if ('addEventListener' in document) {
+      document.addEventListener('DOMContentLoaded', function () {
+        FastClick.attach(document.body);
+      }, false);
+    }
+    if (!window.Promise) {
+      document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"' + '>' + '<' + '/' + 'script>');
+    }
+    //取消浏览器默认行为
+    document.addEventListener('touchstart', function (event) {
+      event.preventDefault();
+    });
+    //点透
+    !(function () {
+      var aNodes = document.querySelectorAll('a');
+      for (var i = 0; i < aNodes.length; i++) {
+        aNodes[i].addEventListener('touchstart', function () {
+          window.location = this.href;
+        });
+      }
+      ;
+    })();
+    //rem适配
+    !(function () {
+      var width = document.documentElement.clientWidth;
+      var styleNode = document.createElement('style');
+      styleNode.innerHTML = 'html{font-size: ' + width / 16 + 'px !important;}';
+      document.head.appendChild(styleNode);
+    })();
+
+  </script>
+</head>
+<body>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
