--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html data-dpr="2" style="font-size: 75px; width: 100%; height: 100%; overflow: hidden;">
 <head>
   <meta charset="utf-8">
   <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+        content="width=device-width,initial-scale=0.5,maximum-scale=0.5,minimum-scale=0.5,user-scalable=no">
   <title>网易严选</title>
   <link rel="stylesheet" href="/static/css/reset.css">
   <!--阿里图标库-->
-  <link rel="stylesheet" href="https://at.alicdn.com/t/font_973108_mpbgvmxiszi.css">
+  <link rel="stylesheet" href="https:////at.alicdn.com/t/font_973108_sex0jkmeol.css">
   <!--解决点击响应延时0.3s问题-->
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
   <script type="text/javascript">
@@ -38,7 +38,7 @@
     !(function () {
       var width = document.documentElement.clientWidth;
       var styleNode = document.createElement('style');
-      styleNode.innerHTML = 'html{font-size: ' + width / 16 + 'px !important;}';
+      styleNode.innerHTML = 'html{font-size: ' + width / 10 + 'px !important;}';
       document.head.appendChild(styleNode);
     })();
 
