个人页面静态写完

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-dpr="2" style="font-size: 75px; width: 100%; height: 100%; overflow: hidden;">
+<html data-dpr="2" style="font-size: 75px; width: 100%; height: 100%; overflow: scroll;background: #eee">
 <head>
   <meta charset="utf-8">
   <meta name="viewport"
@@ -7,7 +7,7 @@
   <title>网易严选</title>
   <link rel="stylesheet" href="/static/css/reset.css">
   <!--阿里图标库-->
-  <link rel="stylesheet" href="https:////at.alicdn.com/t/font_973108_sex0jkmeol.css">
+  <link rel="stylesheet" href="https:////at.alicdn.com/t/font_973108_oxr8wr4ytmf.css">
   <!--解决点击响应延时0.3s问题-->
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
   <script type="text/javascript">
